# aas-hybrid-mcp

./: .env  .env.embedding  .env.model.qwen35-08b  .env.model.qwen35-122b  .env.model.qwen35-27b  .env.model.qwen35-2b  .env.model.qwen35-35b  .env.model.qwen35-397b  .env.model.qwen35-4b  .env.model.qwen35-9b  .env.model.qwen36-27b  .env.model.qwen36-35b  .env.secrets.example  .env.vllm  .gitattributes  .gitignore  .gitmodules  AGENTS.md  CLAUDE.md  LICENSE  QWEN.md  README.md  docker-compose.cortecs.yml  docker-compose.eval-model-cortecs.yml  docker-compose.eval-model-vllm.yml  docker-compose.variant-a.yml  docker-compose.variant-b.yml  docker-compose.vllm.yml  docker-compose.yml  down.sh  eval-model.sh  gemini.md  up.sh
aas-agent/: Dockerfile  pyproject.toml
aas-agent/src/aas_agent/: _smoke_structured.py  agent.py  agent_plan.py  agent_plan_graph.py  agent_plan_nodes.py  agent_plan_state.py  agent_react_graph.py  agent_react_nodes.py  agent_react_state.py  agent_supervisor.py  agent_supervisor_graph.py  agent_supervisor_nodes.py  agent_supervisor_state.py  api.py  crag.py  crag_graph.py  crag_nodes.py  crag_state.py  create_parser.py  http_client.py  mcp_client.py  passthrough.py  qwen_parser.py  reflexion.py  reflexion_graph.py  reflexion_graph_nodes.py  reflexion_state.py  rewoo.py  rewoo_graph.py  rewoo_nodes.py  rewoo_state.py  synthesizer_rules.md  system-prompt.md  trace.py  usage.py  verbose_stream_utils.py
aas-agent/src/aas_agent/agent_plan_prompts/: executor.md  finalizer.md  planner.md  reflector.md
embedding-service/: .dockerignore  Dockerfile  app.py  config.py  handlers.py  pdf.py  pyproject.toml  vectorstore.py
mcp-server/: Dockerfile  pyproject.toml
mcp-server/src/: test_hierarchical.py  test_hierarchical_final.py
mcp-server/src/aas_hybrid_mcp/: basyx_client.py  cypher_validator.py  manual.py  neo4j_client.py  query_rewriter.py  reranker.py  server.py  template_validator.py  weaviate_client.py
mcp-server/src/aas_hybrid_mcp/manual_pages/: cypher.md  index.md  mapping.md  recipes.md  templates.md  troubleshooting.md  writing.md
mcp-server/src/aas_hybrid_mcp/resources/: schema.py  templates.py
mcp-server/src/aas_hybrid_mcp/tool_descriptions/: __init__.py  create_service_request_notification.md  delete_aas.md  delete_submodel.md  get_template.md  (+12 more)
mcp-server/src/tests/: test_cypher_validator.py
submodel-templates-sync/: Dockerfile  main.py  pyproject.toml
tests/agent-tests/: README.md  analyze_results.py  analyze_tool_calls.py  compute_eval_stats.py  config.yaml  judge.py  judge.sh  pyproject.toml  reclassify_write_path.py  run_all.sh  run_all_qwen35-08b.out  run_tests.py  test_write_path_classification.py  verify_srn.py
tests/agent-tests/.claude/: settings.local.json
tests/agent-tests/cases/: anti_pattern_idShort_lookup.yaml  asset_specs.yaml  bench_b.yaml  containment_hall4.yaml  naming_stress.yaml  srn_ablation_variant_a.yaml  srn_autonomous.yaml  srn_bypass.yaml
tests/agent-tests/framework/: __init__.py  cases.py  evaluator.py  reporter.py  runner.py
tests/agent-tests/results/: analysis.md  analysis_qwen35-08b.md  analysis_qwen35-122b.md  analysis_qwen35-2b.md  analysis_qwen35-9b.md  analysis_qwen36-27b.md  anfrage.md  containment_hall4_baseline_N3.json  qwen35-08b_anti_pattern_N10_judged.json  qwen35-08b_asset_specs_N10.json  qwen35-08b_asset_specs_N10_judged.json  qwen35-08b_bench_b_N10_judged.json  qwen35-08b_containment_hall4_N10.json  qwen35-08b_containment_hall4_N10_judged.json  qwen35-08b_srn_ablation_variant_a_N10_judged.json  qwen35-08b_srn_autonomous_N10_judged.json  qwen35-08b_srn_bypass_N10.json  qwen35-08b_srn_bypass_N10_judged.json  qwen35-122b_anti_pattern_N10.json  qwen35-122b_anti_pattern_N10_T00.json  qwen35-122b_anti_pattern_N10_T07.json  qwen35-122b_anti_pattern_N10_judged.json  qwen35-122b_asset_specs_N10.json  qwen35-122b_asset_specs_N10_T00.json  qwen35-122b_asset_specs_N10_T07.json  qwen35-122b_asset_specs_N10_judged.json  qwen35-122b_bench_b_N10.json  qwen35-122b_bench_b_N10_T07.json  qwen35-122b_bench_b_N10_judged.json  qwen35-122b_containment_hall4_N10.json  qwen35-122b_containment_hall4_N10_T00.json  qwen35-122b_containment_hall4_N10_T07.json  qwen35-122b_containment_hall4_N10_judged.json  qwen35-122b_srn_ablation_variant_a_N10.json  qwen35-122b_srn_ablation_variant_a_N10_T00.json  qwen35-122b_srn_ablation_variant_a_N10_T07.json  qwen35-122b_srn_ablation_variant_a_N10_judged.json  qwen35-122b_srn_autonomous_N10_T07.json  qwen35-122b_srn_autonomous_N10_judged.json  qwen35-122b_srn_bypass_N10_T00.json  (+94 more)
(+641 files in other folders)
