[build-system]
requires = ["setuptools>=75.0"]
build-backend = "setuptools.build_meta"

[project]
name = "aas-agent"
version = "0.1.0"
description = "LangGraph agent — OpenAI-compatible gateway to AAS Hybrid MCP"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115,<1",
    "uvicorn>=0.34,<1",
    "sse-starlette>=2.2,<3",
    "langchain-core>=0.3,<1",
    "langchain-openai>=0.3,<1",
    "langgraph>=0.3,<1",
    "mcp>=1.9,<2",
    "langchain-mcp-adapters>=0.0.1,<0.1",
    "httpx>=0.28,<1",
    "pydantic>=2.12,<3",
]

[project.scripts]
aas-agent = "aas_agent.api:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
aas_agent = ["system-prompt.md", "agent_plan_prompts/*.md"]
