[project]
name = "aas-embedding-service"
version = "0.1.0"
description = "AAS Document Embedding Service — PDF ingestion via Kafka events into Weaviate"
requires-python = ">=3.11"
dependencies = [
    "flask>=3.1,<4",
    "gunicorn>=23.0,<24",
    "requests>=2.32,<3",
    "weaviate-client>=4.20,<5",
    "langchain-text-splitters>=1.1,<2",
    "langchain-core>=1.2,<2",
    "langchain-openai>=1.1,<2",
    "langchain-google-genai>=4.2,<5",
    "langchain-voyageai>=0.3,<1",
    "langchain-ollama>=1.0,<2",
]

[project.optional-dependencies]
fast = ["pymupdf4llm>=0.0.17,<1"]
precise = ["docling>=2.74,<3"]
