[project]
name = "aas-hybrid-mcp"
version = "0.1.0"
description = "Hybrid MCP Server — Neo4j graph queries and Weaviate vector search for AAS"
requires-python = ">=3.11"
dependencies = [
    "mcp[cli]>=1.26,<2",
    "neo4j>=6.1,<7",
    "pydantic>=2.12,<3",
]

[project.scripts]
aas-hybrid-mcp = "aas_hybrid_mcp.server:main"

[tool.setuptools.packages.find]
where = ["src"]
