[project]
name = "aas-hybrid-mcp"
version = "0.1.0"
description = "Hybrid MCP Server — Neo4j graph queries and Weaviate vector search for AAS"
requires-python = ">=3.11"
dependencies = [
    "fastmcp>=2.14,<3",
    "uvicorn>=0.34,<1",
    "neo4j>=6.1,<7",
    "pydantic>=2.12,<3",
    "weaviate-client>=4.20,<5",
    "langchain-core>=1.2,<2",
    "langchain-openai>=1.1,<2",
    "langchain-google-genai>=4.2,<5",
    "langchain-voyageai>=0.3,<1",
    "langchain-ollama>=1.0,<2",
]

[project.scripts]
aas-hybrid-mcp = "aas_hybrid_mcp.server:main"

[tool.setuptools.packages.find]
where = ["src"]
