[build-system]
requires = ["setuptools>=75.0"]
build-backend = "setuptools.build_meta"

[project]
name = "submodel-templates-sync"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "weaviate-client>=4.20,<5",
    "langchain-text-splitters>=1.1,<2",
    "langchain-core>=1.2,<2",
    "langchain-openai>=1.1,<2",
    "langchain-google-genai>=4.2,<5",
    "langchain-voyageai>=0.3,<1",
    "langchain-ollama>=1.0,<2",
    "pymupdf4llm>=0.0.17,<1",
    "aas-submodel-to-py==0.1.1",
]
