[build-system]
requires = ["setuptools>=75.0"]
build-backend = "setuptools.build_meta"

[project]
name = "aas-agent-tests"
version = "0.1.0"
description = "External test framework for AAS Hybrid MCP agent variants"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.28,<1",
    "pydantic>=2.12,<3",
    "PyYAML>=6.0,<7",
    "rich>=13.9,<14",
]

[project.scripts]
aas-agent-tests = "run_tests:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["framework*"]
